added get product by id
